--- a/public/css/style-signup.css
+++ b/public/css/style-signup.css
@@ -1,7 +1,26 @@
 
+:root {
+  --theme-color: rgba(24, 192, 46, 0.534);
+}
+
 .gradient-custom-3 {
   background: linear-gradient(to right, rgba(132, 250, 176, 0.5), rgba(143, 211, 244, 0.5))
 }
+
 .gradient-custom-4 {
   background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  margin-bottom: 3;
+}
+
+.btn {
+  background-color: var(--theme-color);
+  color: black;
+  border-color: transparent;
 }
