--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,7 +6,7 @@
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
           <div class="card" style="border-radius: 15px;">
             <div class="card-body p-5">
-              <a href="/">
+              <a href="/" class="text-center">
                 <!-- Aspetto dell'immagine originale: 3.66:1 -->
                 <img src="img/icon-transparent.png" alt="home" width="250" height="68" />
               </a>
@@ -19,23 +19,17 @@
 
                 <!-- Nome e cognome -->
                 <div class="form-outline mb-4">
-                  <div class="row">
-                    <div class="col-xs-6"><input type="text" class="form-control" name="nome" placeholder="Nome"
-                        required="required"></div>
-                    <div class="col-xs-6"><input type="text" class="form-control" name="cognome" placeholder="Cognome"
-                        required="required"></div>
-                  </div>
+                  <input type="text" class="form-control" name="nome" placeholder="Nome" required/>
+                  <input type="text" class="form-control" name="cognome" placeholder="Cognome" required/>
                 </div>
 
-                <!-- Data di nascita -->
                 <div class="form-outline mb-4">
-                  <label for="data" <b>Data di nascita</b></label>
-                  <input type="date" id="data" name="data" onchange="checkData()">
-                </div>
+                  <!-- Data di nascita -->
+                  <label for="data">Data di nascita</label>
+                  <input type="date" id="data" name="data" onchange="checkData()"/>
 
-                <!-- Sesso -->
-                <div class="form-outline mb-4">
-                  <label class="my-1 mr-2" for="sesso">Sesso</label>
+                  <!-- Sesso -->
+                  <label class="my-1" for="sesso">Sesso</label>
                   <select name="sesso" id="sesso" required>
                     <option value="" selected></option>
                     <option value="M">maschio</option>
@@ -45,47 +39,41 @@
                 </div>
 
                 <!-- Email -->
-                <div class="form-outline mb-4">
-                  <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-paper-plane"></i></span>
-                    <input type="email" class="form-control" name="email" placeholder="Email " required>
-                  </div>
+                <div class="form-outline mb-4 input-group">
+                  <span class="input-group-addon"><i class="fa fa-paper-plane"></i></span>
+                  <input type="email" class="form-control" name="email" placeholder="Email" required/>
                 </div>
 
                 <!-- Password -->
-                <div class="form-outline mb-4">
-                  <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                    <input type="password" class="form-control" name="password" placeholder="Password" id="password"
-                      onchange='checkLgh()' required>
-                  </div>
+                <div class="form-outline mb-4 form-group">
+                  <span class="input-group-addon"><i class="fa fa-lock"></i></span> <!-- non funziona -->
+                  <input type="password" class="form-control" name="password" placeholder="Password" id="password"
+                    onchange='checkLgh()' required/>
+                    
                   <!-- Mostra password -->
                   <input class="form-check-input" type="checkbox" name="showPsw" onclick="showPwd()">
                   <label class="form-check-label" for="flexCheckDefault"> mostra</label>
                 </div>
 
                 <!-- Password repeat -->
-                <div class="form-outline mb-4">
-                  <div class="form-group">
-                    <span class="form-group-addon">
-                      <i class="fa fa-lock"></i>
-                      <i class="fa fa-check"></i>
-                    </span>
-                    <input type="password" class="form-control" name="confirm_password" placeholder="Conferma Password"
-                      id="password_repeat" onchange='checkPwdMatch()' required="required">
-                  </div>
+                <div class="form-outline mb-4 form-group">
+                  <span class="form-group-addon">
+                    <i class="fa fa-lock"></i> <!-- non funziona -->
+                    <i class="fa fa-check"></i> <!-- non funziona -->
+                  </span>
+
+                  <input type="password" class="form-control" name="confirm_password" placeholder="Conferma Password"
+                    id="password_repeat" onchange='checkPwdMatch()' required/>
+
                   <!-- Mostra password -->
                   <input class="form-check-input" type="checkbox" name="showPsw2" onclick="showPwd2()">
                   <label class="form-check-label" for="flexCheckDefault"> mostra</label>
+                </div>
 
-                  <!-- Termini e condizioni -->
-                </div>
+                <!-- Termini e condizioni -->
                 <div class="form-outline mb-4">
-                  <span id='message'></b></span>
-                </div>
-                <div class="form-outline mb-4">
-                  <label class="checkbox-inline"><input type="checkbox" required="required"> Accetto i
-                    <a href="#">Termini d'uso e condizioni </a>
+                  <label class="checkbox-inline"><input type="checkbox" required/>
+                    Accetto i <a href="#">Termini d'uso e condizioni</a>
                   </label>
                 </div>
 
@@ -94,8 +82,10 @@
                   <button type="submit" class="btn btn-primary btn-lg">Registrati</button>
                 </div>
               </form>
+
               <div class="text-center">Sei già registrato? <a href="login">Accedi</a></div>
               <div class="text-center">Torna alla <a href="/">Home</a></div>
+
             </div>
           </div>
         </div>
