--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,52 +16,55 @@
     </form>
 </body>
 -->
-
 <section class="vh-100 bg-image"
-    style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
-    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-        <div class="container h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                    <div class="card" style="border-radius: 15px;">
-                        <div class="card-body p-4">
+  style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+    <div class="container h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+          <div class="card" style="border-radius: 15px;">
+            <div class="card-body p-4">
 
-                            <!-- Form -->
-                            <form action="/loginValid" method="post" class="form-signin" onsubmit="validaForm()">
-                                <a href="/" class="">
-                                    <!-- Aspetto dell'immagine originale: 3.66:1 -->
-                                    <img src="img/icon-transparent.png" alt="home"/>
-                                </a>
+              <!-- Form -->
+              <form action="/loginValid" method="post" class="form-signin" onsubmit="validaForm()">
+                <a href="/" class="">
+                  <!-- Aspetto dell'immagine originale: 3.66:1 -->
+                  <img src="img/icon-transparent.png" alt="home" />
+                </a>
 
-                                <p> Inserisci i dati per accedere al tuo account!</p>
-                                <hr>
+                <p> Inserisci i dati per accedere al tuo account!</p>
+                <hr>
 
-                                <!-- Email -->
-                                <span class="input-group-addon"><i class="fa fa-paper-plane"></i></span> <!-- non funziona -->
-                                <input type="email" class="form-control" name="email" placeholder="Email" required>
+                <!-- Email -->
+                <label for="email"><i class="fas fa-paper-plane"></i></label> <!-- non funziona -->
+                <input type="email" class="form-control" name="email" placeholder="Email" value="{{email}}" required>
 
-                                <!-- Password -->
-                                <input type="password" class="form-control" name="password" placeholder="Password" 
-                                    id="password" onchange='checkLgh()' required>
-                                <!-- Mostra password -->
-                                <input class="form-check-input" type="checkbox" name="showPsw" onclick="showPwd()"/>
-                                <label class="form-check-label" for="flexCheckDefault"> Mostra</label>
-                                <br><br>
-                                <!-- Remember me -->
-                                <input type="checkbox" name="rememberMe" class="form-check-input"/>
-                                <label for="rememberMe">Remember me</label>
-                                <br>
+                <!-- Password -->
+                <label for="password"><i class="fa fa-lock"></i></label>
+                <input type="password" class="form-control" name="password" placeholder="Password" id="password"
+                  onchange='checkLgh()' required>
+                <!-- Mostra password -->
+                <input class="form-check-input" type="checkbox" name="showPsw" onclick="showPwd()" />
+                <label class="form-check-label" for="flexCheckDefault"> Mostra</label>
+                <br><br>
+                <!-- Remember me -->
+                <input type="checkbox" name="rememberMe" class="form-check-input" />
+                <label for="rememberMe">Remember me</label>
+                <br>
 
-                                <!-- Bottone di conferma -->
-                                <div class="text-center">
-                                    <button type="submit" name="loginButton" class="btn btn-primary btn-lg btn-login">Accedi</button>
-                                </div>
-                            </form>
-                            <div class="text-center">Non hai un account? <a href="signup">Registrati</a></div>
-                        </div>
-                    </div>
+                <!-- Messaggio di errore -->
+                <div class="form-outline mb-4 text-danger" id='message'>{{error}}</div>
+
+                <!-- Bottone di conferma -->
+                <div class="text-center">
+                  <button type="submit" name="loginButton" class="btn btn-primary btn-lg btn-login">Accedi</button>
                 </div>
+              </form>
+              <div class="text-center">Non hai un account? <a href="signup">Registrati</a></div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </section>
