--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -19,14 +19,14 @@
 
                 <!-- Nome e cognome -->
                 <div class="form-outline mb-4">
-                  <input type="text" class="form-control" name="nome" placeholder="Nome" required/>
-                  <input type="text" class="form-control" name="cognome" placeholder="Cognome" required/>
+                  <input type="text" class="form-control" name="nome" placeholder="Nome" required />
+                  <input type="text" class="form-control" name="cognome" placeholder="Cognome" required />
                 </div>
 
                 <div class="form-outline mb-4">
                   <!-- Data di nascita -->
                   <label for="data">Data di nascita</label>
-                  <input type="date" id="data" name="data" onchange="checkData()"/>
+                  <input type="date" id="data" name="data" onchange="checkData()" />
 
                   <!-- Sesso -->
                   <label class="my-1" for="sesso">Sesso</label>
@@ -40,39 +40,38 @@
 
                 <!-- Email -->
                 <div class="form-outline mb-4 input-group">
-                  <span class="input-group-addon"><i class="fa fa-paper-plane"></i></span>
-                  <input type="email" class="form-control" name="email" placeholder="Email" required/>
+                  <label for="email"><i class="fa fa-paper-plane"></i></label>
+                  <input type="email" class="form-control" name="email" placeholder="Email" required />
                 </div>
 
                 <!-- Password -->
-                <div class="form-outline mb-4 form-group">
-                  <span class="input-group-addon"><i class="fa fa-lock"></i></span> <!-- non funziona -->
+                <div class="form-outline mb-4 input-group">
+                  <label for="password"><i class="fa fa-lock"></i></label>
                   <input type="password" class="form-control" name="password" placeholder="Password" id="password"
-                    onchange='checkLgh()' required/>
-                    
+                    onchange='checkLgh()' required />
+
                   <!-- Mostra password -->
                   <input class="form-check-input" type="checkbox" name="showPsw" onclick="showPwd()">
-                  <label class="form-check-label" for="flexCheckDefault"> mostra</label>
+                  <label for="password"><i class="fa fa-eye"></i></label>
                 </div>
 
                 <!-- Password repeat -->
-                <div class="form-outline mb-4 form-group">
-                  <span class="form-group-addon">
-                    <i class="fa fa-lock"></i> <!-- non funziona -->
-                    <i class="fa fa-check"></i> <!-- non funziona -->
-                  </span>
-
-                  <input type="password" class="form-control" name="confirm_password" placeholder="Conferma Password"
-                    id="password_repeat" onchange='checkPwdMatch()' required/>
+                <div class="form-outline mb-4 input-group">
+                  <label for="password_repeat"><i class="fa fa-lock"></i></label>
+                  <input type="password" class="form-control" name="password_repeat" placeholder="Conferma Password"
+                    id="password_repeat" onchange='checkPwdMatch()' required />
 
                   <!-- Mostra password -->
                   <input class="form-check-input" type="checkbox" name="showPsw2" onclick="showPwd2()">
-                  <label class="form-check-label" for="flexCheckDefault"> mostra</label>
+                  <label for="password_repeat"><i class="fa fa-eye"></i></label>
                 </div>
+
+                <!-- Messaggio di errore -->
+                <div class="form-outline mb-4" id='message'></div>
 
                 <!-- Termini e condizioni -->
                 <div class="form-outline mb-4">
-                  <label class="checkbox-inline"><input type="checkbox" required/>
+                  <label class="checkbox-inline"><input type="checkbox" required />
                     Accetto i <a href="#">Termini d'uso e condizioni</a>
                   </label>
                 </div>
