--- a/public/css/style-signin.css
+++ b/public/css/style-signin.css
@@ -31,7 +31,7 @@ img {
   border-top-right-radius: 0;
 }
 
-.btn {
+.btn-login {
   background-color: var(--theme-color);
   color: black;
   border-color: transparent;
