Gestione errori durante la registrazione Controllo registrazione con mail già esistenti

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,21 +1,4 @@
-<!-- Body della pagina di login
-<body class="text-center">
-    <form action="" class="form-signin" method="post" name="form-login" onsubmit="validaForm()">
-        <a href="/">
-            <!-- Aspetto dell'immagine originale: 3.66:1 --
-            <img class="mb-4" src="img/icon-transparent.png" alt="home" width="250" height="68"/>
-        </a>
-        <h1 class="h3 mb-3 font-weight-normal">Effettua il login</h1>
-        <input type="email" name="inputEmail" class="form-control" placeholder="Email" required autofocus/>
-        <input type="password" name="inputPassword" class="form-control" placeholder="Password" required/>
-        <div id="divRemember" class="checkbox mb-3">
-            <input type="checkbox" name="rememberMe"/>
-            <label for="rememberMe">Remember me</label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" name="loginButton" type="submit">Sign in</button>
-    </form>
-</body>
--->
+<!-- Body della pagina di login -->
 <section class="vh-100 bg-image"
   style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
   <div class="mask d-flex align-items-center h-100 gradient-custom-3">
@@ -60,7 +43,10 @@
                   <button type="submit" name="loginButton" class="btn btn-primary btn-lg btn-login">Accedi</button>
                 </div>
               </form>
+
+              <!-- Link di navigazione -->
               <div class="text-center">Non hai un account? <a href="signup">Registrati</a></div>
+            
             </div>
           </div>
         </div>
