--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -67,7 +67,7 @@
                 </div>
 
                 <!-- Messaggio di errore -->
-                <div class="form-outline mb-4" id='message'></div>
+                <div class="form-outline mb-4 text-danger" id='message'>{{error}}</div>
 
                 <!-- Termini e condizioni -->
                 <div class="form-outline mb-4">
@@ -82,6 +82,7 @@
                 </div>
               </form>
 
+              <!-- Link di navigazione -->
               <div class="text-center">Sei già registrato? <a href="login">Accedi</a></div>
               <div class="text-center">Torna alla <a href="/">Home</a></div>
 
