--- a/public/css/style-main.css
+++ b/public/css/style-main.css
@@ -56,7 +56,7 @@ a {
 }
 
 .listing {
-  width: 100%;
+  width: 90%;
   display: none;
 }
 
@@ -64,3 +64,14 @@ a {
   display: none;
 }
 
+@media screen and (max-width: 600px) {
+  footer {
+    bottom: auto;
+    display: flex;
+    flex-direction: column;
+  }
+
+  footer p {
+    margin-bottom: 1;
+  }
+}
