--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,5 @@
 <!-- Body della pagina di login -->
-<section class="vh-100 bg-image"
-  style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+<section class="bg-image">
   <div class="mask d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -12,41 +11,49 @@
               <form action="/loginValid" method="post" class="form-signin" onsubmit="validaForm()">
                 <a href="/" class="">
                   <!-- Aspetto dell'immagine originale: 3.66:1 -->
-                  <img src="img/icon-transparent.png" alt="home" />
+                  <img src="img/icon-transparent.png" alt="home" width="250" height="68"/>
                 </a>
 
                 <p> Inserisci i dati per accedere al tuo account!</p>
                 <hr>
 
                 <!-- Email -->
-                <label for="email"><i class="fas fa-paper-plane"></i></label> <!-- non funziona -->
-                <input type="email" class="form-control" name="email" placeholder="Email" value="{{email}}" required>
+                <div class="form-outline mb-1">
+                  <label for="email"><i class="fas fa-paper-plane"></i></label> <!-- non funziona -->
+                  <input type="email" class="form-control" name="email" placeholder="Email" value="{{email}}" required>
+                </div>
 
                 <!-- Password -->
-                <label for="password"><i class="fa fa-lock"></i></label>
-                <input type="password" class="form-control" name="password" placeholder="Password" id="password"
-                  onchange='checkLgh()' required>
+                <div class="form-outline mb-1">
+                  <label for="password"><i class="fa fa-lock"></i></label>
+                  <input type="password" class="form-control" name="password" placeholder="Password" id="password"
+                    onchange='checkLgh()' required>
+                </div>
+
                 <!-- Mostra password -->
-                <input class="form-check-input" type="checkbox" name="showPsw" onclick="showPwd()" />
-                <label class="form-check-label" for="flexCheckDefault"> Mostra</label>
-                <br><br>
+                <div class="form-outline mb-2">
+                  <input class="form-check-input" type="checkbox" name="showPsw" onclick="showPwd()" />
+                  <label class="form-check-label" for="flexCheckDefault"> Mostra</label>
+                </div>
+
                 <!-- Remember me -->
-                <input type="checkbox" name="rememberMe" class="form-check-input" />
-                <label for="rememberMe">Remember me</label>
-                <br>
+                <div class="form-outline mb-1">
+                  <input type="checkbox" name="rememberMe" class="form-check-input" />
+                  <label for="rememberMe">Remember me</label>
+                </div>
 
                 <!-- Messaggio di errore -->
                 <div class="form-outline mb-4 text-danger" id='message'>{{error}}</div>
 
                 <!-- Bottone di conferma -->
-                <div class="text-center">
+                <div class="text-center form-outline">
                   <button type="submit" name="loginButton" class="btn btn-primary btn-lg btn-login">Accedi</button>
                 </div>
               </form>
 
               <!-- Link di navigazione -->
               <div class="text-center">Non hai un account? <a href="signup">Registrati</a></div>
-            
+
             </div>
           </div>
         </div>
