--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,6 +1,6 @@
 <!-- Footer -->
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
-    <p class="col-md-4 mb-0 text-muted px-4">&copy; 2022 EventHub</p>
+    <p class="col-md-4 text-muted px-4">&copy; 2022 EventHub</p>
 
     <a href="/"
         class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
