--- a/views/partials/main-listing.handlebars
+++ b/views/partials/main-listing.handlebars
@@ -8,7 +8,7 @@
         <a href="#" class="px-1">
             <button class="btn btn-info btn-lg" onclick="info('{{id}}')">Maggiori informazioni</button>
         </a>
-        <a href="#" class="">
+        <a href="#" class="px-1">
             <button class="btn btn-prenota btn-lg" onclick="prenota({{id}})">Prenota</button>
         </a>
     </p>
