Introdotto FontAwesome in locale

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,13 +18,13 @@
                 <hr>
 
                 <!-- Email -->
-                <div class="form-outline mb-1">
-                  <label for="email"><i class="fas fa-paper-plane"></i></label> <!-- non funziona -->
+                <div class="form-outline mb-1 input-group">
+                  <label for="email"><i class="fas fa-envelope fa-fw"></i></label> <!-- non funziona -->
                   <input type="email" class="form-control" name="email" placeholder="Email" value="{{email}}" required>
                 </div>
 
                 <!-- Password -->
-                <div class="form-outline mb-1">
+                <div class="form-outline mb-1 input-group">
                   <label for="password"><i class="fa fa-lock"></i></label>
                   <input type="password" class="form-control" name="password" placeholder="Password" id="password"
                     onchange='checkLgh()' required>
