--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -40,7 +40,7 @@
 
                 <!-- Email -->
                 <div class="form-outline mb-3 input-group">
-                  <label for="email"><i class="fa fa-paper-plane"></i></label>
+                  <label for="email"><i class="fa fa-envelope fa-fw"></i></label>
                   <input type="email" class="form-control" name="email" placeholder="Email" required />
                 </div>
 
