--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -21,7 +21,26 @@
             </form>
 
             <!-- Dropdown/buttons se loggato -->
-            {{{div}}}
+            {{#if log}}
+                <div class="dropdown text-end">
+                    <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Ciao {{utente}}
+                    </a>
+                    <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+                        <li><a class="dropdown-item" href="settings">Impostazioni</a></li>
+                        <li><a class="dropdown-item" href="profile">Il mio profilo</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="logout">Esci</a></li>
+                    </ul>
+                </div>
+            {{else}}
+                <div class="text-end">
+                    <a href="login"><button class="btn btn-primary btn-login">Accedi</button></a>
+                    <a href="signup"><button class="btn btn-primary btn-login">Registrati</button></a>
+                </div>
+            {{/if}}
+            
         </div>
     </div>
 </header>
