Completata funzione di ricerca eventi

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -23,6 +23,11 @@
         </script>
     {{/if}}
 
+    <!-- Parte di ricerca: se non ci sono risultati allora stampa l'errore -->
+    {{#if error}}
+        <div class="mb-3 text-danger text-center" id="message">{{error}}</div>
+    {{/if}}
+
     <!-- Per ogni elemento della query crea un nuovo elemento -->
     {{#each mainList}}
         {{> main-listing}}
