modificata pagina inmpostazioni e creazione di script relativi

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -1,4 +1,5 @@
 <!-- Usare il foglio di stile style-settings.css per tutti gli stili usati -->
+
 <body>
     {{> header}}
 
@@ -16,7 +17,8 @@
                         <!-- Profile picture help block-->
                         <div class="small font-italic text-muted mb-4">JPG/PNG fino a 5 MB</div>
                         <!-- Profile picture upload button-->
-                        <span>Carica l'immagine<input type="file" id="photo" name="photo" accept="image/png, image/jpeg"></span>
+                        <span>Carica l'immagine<input type="file" id="photo" name="photo"
+                                accept="image/png, image/jpeg"></span>
                     </div>
                 </div>
             </div>
@@ -30,40 +32,68 @@
                             <!-- Form Group (mail)-->
                             <div class="mb-3">
                                 <label class="small mb-1" for="inputMail">Email</label>
-                                <input class="form-control" id="inputMail" type="email" placeholder="Inserire email"/>
+                                <input class="form-control" id="inputMail" type="email" placeholder="Inserire email" />
                             </div>
                             <!-- Form Row  -->
                             <div class="row gx-3 mb-3">
                                 <!-- Form Group (nome)-->
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="inputNome">Nome</label>
-                                    <input class="form-control" id="inputNome" type="text" placeholder="Inserire nome"/>
+                                    <input class="form-control" id="inputNome" type="text"
+                                        placeholder="Inserire nome" />
                                 </div>
                                 <!-- Form Group (cognome)-->
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="inputCognome">Cognome</label>
-                                    <input class="form-control" id="inputCognome" type="text" placeholder="Inserire cognome"/>
+                                    <input class="form-control" id="inputCognome" type="text"
+                                        placeholder="Inserire cognome" />
                                 </div>
                             </div>
 
                             <div class="mb-3">
                                 <!-- Data di nascita -->
                                 <label class="small mb-1" for="data">Data di nascita</label>
-                                <input class="form-control" type="date" id="data" name="data"/>
+                                <input class="form-control" type="date" id="data" name="data" />
+                            </div>
+
+                            <div class="mb-3">
+                                <!-- Data di nascita -->
+                                <label class="small mb-1" for="oldPsw">Password attuale</label>
+                                <input class="form-control" type="password" id="oldPsw" />
                             </div>
 
                             <!-- Form Row-->
                             <div class="row gx-3 mb-3">
                                 <div class="col-md-6">
-                                    <label class="small mb-1" for="inputPhone">Password</label>
-                                    <input class="form-control" id="inputPhone" type="password" placeholder="enter a new password"/>
+                                    <label class="small mb-1" for="inputPsw">Nuova password</label>
+                                    <input class="form-control" id="inputPsw" type="password"
+                                        placeholder="enter a new password" onchange="checkLghSet" />
                                 </div>
-                                
+
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="psw-repeat">Ripeti password</label>
-                                    <input class="form-control" id="psw-repeat" type="password" name="psw-repeat" placeholder="Ripeti password"/>
+                                    <input class="form-control" id="psw-repeat" type="password" name="psw-repeat"
+                                        placeholder="Ripeti password" onchange='checkPwdMatch()'/>
                                 </div>
                             </div>
+
+                            <div class="row gx-3 mb-3">
+                                <div class="col-md-6">
+                                    <input class="form-check-input" type="checkbox" name="showPsw2"
+                                        onclick="showSetPwd1()">
+                                    <label for="password_repeat"><i class="fa fa-eye"></i></label>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <input class="form-check-input" type="checkbox" name="showPsw2"
+                                        onclick="showSetPwd2()">
+                                    <label for="password_repeat"><i class="fa fa-eye"></i></label>
+                                </div>
+                            </div>
+
+                            <!-- Messaggio di errore -->
+                            <div class="form-outline mb-3 text-danger" id='messageSet'>{{error}}</div>
+
                             <!-- Save changes button-->
                             <button class="btn btn-primary" type="button">Conferma</button>
                         </form>
